--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: TutHub-Page Test
+    name: TutHub-Page Delivery
     runs-on: ubuntu-22.04
     container:
       image: node:18
