--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -5,11 +5,14 @@ jobs:
   build:
     name: TutHub-Page Test
     runs-on: ubuntu-22.04
-    container:
-      image: node:18
     steps:
       - name: checkout
         uses: actions/checkout@v3
+
+      - name: setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
       - name: npm install
         run: npm install
